--- a/build.gradle
+++ b/build.gradle
@@ -22,10 +22,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-	annotationProcessor 'org.projectlombok:lombok'
+
+	implementation group: 'org.apache.commons', name: 'commons-pool2', version: '2.6.2'
+	implementation group: 'redis.clients', name: 'jedis', version: '2.9.3'
+
+	implementation 'org.redisson:redisson-spring-boot-starter:3.17.0'
+	implementation 'com.mysql:mysql-connector-j'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 }
 
 tasks.named('test') {
